@@ -13,7 +13,6 @@
 #define PQXX_HAVE_PQFTABLE 1
 #define PQXX_HAVE_PQFTABLECOL 1
 #define PQXX_HAVE_PQISTHREADSAFE 1
-#define PQXX_HAVE_PQMBLEN 1
 #define PQXX_HAVE_PQPREPARE 1
 #define PQXX_HAVE_PQPROTOCOLVERSION 1
 #define PQXX_HAVE_PQPUTCOPY 1
