@@ -5,6 +5,15 @@
  config/sample-headers/libpq/8.3/pqxx/config-internal-libpq.h,
  config/sample-headers/libpq/8.4/pqxx/config-internal-libpq.h,
  config/sample-headers/libpq/9.0/pqxx/config-internal-libpq.h,
+ configitems, configure.ac.in, include/pqxx/config.h.in:
+ - Remove configuration for missing PQmblen().
+2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ config/sample-headers/libpq/8.0/pqxx/config-internal-libpq.h,
+ config/sample-headers/libpq/8.1/pqxx/config-internal-libpq.h,
+ config/sample-headers/libpq/8.2/pqxx/config-internal-libpq.h,
+ config/sample-headers/libpq/8.3/pqxx/config-internal-libpq.h,
+ config/sample-headers/libpq/8.4/pqxx/config-internal-libpq.h,
+ config/sample-headers/libpq/9.0/pqxx/config-internal-libpq.h,
  configitems, configure.ac.in, include/pqxx/config.h.in,
  src/connection_base.cxx, src/util.cxx:
  - Remove workaround for missing PQcancel.
